# ptcgcore

./: .gitignore  CMakeLists.txt  Readme.md  compile.sh  kill.sh  stage.h  world.cc  world.h
app/: CMakeLists.txt  node.cpp  package.xml  pb_transport_helper.h  ptcg_world.cpp  ptcg_world.h  sample_player.cpp  sample_player.h
app/src/: node.cpp  pb_transport_helper.h  ptcg_world.cpp  ptcg_world.h  sample_player.cpp  sample_player.h
app/srv/: Command.srv  WorldState.srv
buff/: buff.h
card/: card.h  card_factory.cc  card_factory.h  energy_card.h  monster_card.h  trainer_card.h
card/impl/: card_dataset.pb.txt  monster_card.h
common/: error_code.h  file.h
config/: deck1.pb.txt  world_config.pb.txt
cost/: cost.h
place/: card_place.cc  card_place.h  stage.cc  stage.h  stage_watcher.h
proto/: CMakeLists.txt  card.proto  check_result.proto  command.proto  deck_config.proto  world_config.proto
proto/card/: card_state.proto  common.proto  effect_description.proto  energy_card.proto  monster_card.proto  trainer_card.proto
